--- a/Week04.qmd
+++ b/Week04.qmd
@@ -2,7 +2,7 @@
 title: "Week04"
 ---
 
-The lecture of the week has introduced several applications of remote sensing and their policy challenges. The following content will focus on Singapore Climate Action contributing to the thermal environment and the urban heat island (UHI) effect. Besides, I will explore how to apply remote sensing data to respond to Singapore's Climate Targets and their mitigation strategies. It is worth noting that the current methods based on remote sensing data are mainly limited to the monitoring and analysis of the real situation. How to use this data for prevention strategies needs further research.
+The lecture of the week has introduced several applications of remote sensing and their policy challenges. The following content will focus on Singapore Climate Action contributing to the thermal environment and the urban heat island (UHI) effect. Besides, I will explore how to apply remote sensing data to respond to Singapore's Climate Targets and their mitigation strategies. It is worth noting that the current methods based on remote sensing data are mainly limited to the monitoring and analysis of the real situation. How to use this data for prevention strategies still needs to be further studied.
 
 # 1.Content Summary: Policy Challenge {.unnumbered}
 
@@ -88,42 +88,52 @@ Moreover, Mushore, Odindi and Mutanga (2022) examine the colour of roof coating 
 
 # 3.Reflection {.unnumbered}
 
-need to be finished the project
-
 ## 3.1 Linking to global agendas and goals {.unnumbered}
 
-In support of SDGs: 11 sustainable cities and commnuities: Make cities and human settlenents inclusive, safe, resillient and sustainable. 13 Climate action: Take urgent action to combat climate change and its impacts
+In this Chapter, I have studied the UHI challenges and policies in Singapore, and have proposed two approaches to achieving policy goals from the perspective of remote sensing data, namely Urban Morphology (LCZs) and "Cooling" Roofs. The studies of urban morphology (LCZs) can monitor the thermal environment and support HDB Green Towns programmes, contributing to sustainable urban regeneration in the future. Given Singapore's high-density built-up areas, it is difficult to adopt a large-scale strategy. Thus, "Cooling" roofs, as an "acupuncture" strategy, can effectively mitigate the local thermal environment, and reduce building temperature and energy consumption. Overall, these two strategies solve the UHI effect from different urban scales, and effective application and deployment are conducive to achieving "Cooling" Singapore.
 
-![Figure 9 In support of SDGs 12 and SDG 13](source/week04/SDG11_13.png)
+Regarding global agendas and goals, the policy and strategies effectively respond to the 2015 Paris Agreement. Moreover, In terms of Sustainable Development Goals (SDG) proposed by the United Nations(UN), the efforts of strategies can be reflected in SDG11 and SDG12 (Figure 9).
+
+<br/> **SDGs11**:Sustainable Cities and Communities. <br/> Make cities and human settlements inclusive, safe, resilient and sustainable. <br/> **SDGs13**: Climate Action.<br/> Take urgent action to combat climate change and its impact.
+
+![Figure 9 In support of SDGs 11 and SDG 13](source/week04/SDG11_13.png) 
+
+## 3.2 Personal Reflection {.unnumbered}
+
+Remote sensing data plays a key role in policy development in Singapore to address the urban heat island effect in Singapore. However, we must acknowledge its limitations, primarily confined to monitoring and analysing current situations, while preventative strategies require further in-depth research. Both applications discussed UHI through LST in different types of built environments; however, Chakraborty et al.(2022) pointed out that LST obtained from satellites exhibits limited correlations with air temperature. Therefore, it is crucial to integrate remote sensing data with other data from diverse sources, such as integrating real-time temperature data with remotely sensed built environment data. This integration can drive technological innovation, allowing for a more comprehensive and effective approach to climate studies.
+
+Thus, these challenges highlight the need for continuous learning and innovation in remote sensing applications to ensure that these applications can adapt to changing climate conditions and drive more comprehensive, sustainable solutions.
 
 # 4.Reference {.unnumbered}
 
 ::: {style="overflow-y: scroll; height: 300px;"}
-Bechtel, B., Demuzere, M., Sismanidis, P., Fenner, D., Brousse, O., Beck, C., Van Coillie, F., Conrad, O., Keramitsoglou, I., Middel, A., Mills, G., Niyogi, D., Otto, M., See, L. and Verdonck, M.-L. (2017). ‘Quality of Crowdsourced Data on Urban Morphology—The Human Influence Experiment (HUMINEX)’. Urban Science, 1 (2), p. 15. doi: 10.3390/urbansci1020015.
+Bechtel, B., Demuzere, M., Sismanidis, P., Fenner, D., Brousse, O., Beck, C., Van Coillie, F., Conrad, O., Keramitsoglou, I., Middel, A., Mills, G., Niyogi, D., Otto, M., See, L. and Verdonck, M.-L. (2017). 'Quality of Crowdsourced Data on Urban Morphology---The Human Influence Experiment (HUMINEX)'. Urban Science, 1 (2), p. 15. doi: 10.3390/urbansci1020015.
 
 Borzino, N., Chng, S., Mughal, M. O. and Schubert, R. (2020). 'Willingness to Pay for Urban Heat Island Mitigation: A Case Study of Singapore'. Climate, 8 (7), p. 82. doi: 10.3390/cli8070082.
 
-Despini, F., Ferrari, C., Santunione, G., Tommasone, S., Muscio, A. and Teggi, S. (2021). ‘Urban surfaces analysis with remote sensing data for the evaluation of UHI mitigation scenarios’. Urban Climate, 35, p. 100761. doi: 10.1016/j.uclim.2020.100761.
+Chakraborty, T., Venter, Z. S., Qian, Y. and Lee, X. (2022). 'Lower Urban Humidity Moderates Outdoor Heat Stress'. AGU Advances, 3 (5), p. e2022AV000729. doi: 10.1029/2022AV000729.
+
+Despini, F., Ferrari, C., Santunione, G., Tommasone, S., Muscio, A. and Teggi, S. (2021). 'Urban surfaces analysis with remote sensing data for the evaluation of UHI mitigation scenarios'. Urban Climate, 35, p. 100761. doi: 10.1016/j.uclim.2020.100761.
 
 Grimmond, S. (2007). 'Urbanization and global environmental change: local effects of urban warming'. The Geographical Journal, 173 (1), pp. 83--88. doi: 10.1111/j.1475-4959.2007.232_3.x.
 
-Mackey, C. W., Lee, X. and Smith, R. B. (2012). ‘Remotely sensing the cooling effects of city scale efforts to reduce urban heat island’. Building and Environment, 49, pp. 348–358. doi: 10.1016/j.buildenv.2011.08.004.
+Mackey, C. W., Lee, X. and Smith, R. B. (2012). 'Remotely sensing the cooling effects of city scale efforts to reduce urban heat island'. Building and Environment, 49, pp. 348--358. doi: 10.1016/j.buildenv.2011.08.004.
 
 Ministry of Sustainability and the Environment and URA (no date) Factsheet on Singapore's Efforts to Mitigate the Urban Heat Island Effect. Available at: https://www.mse.gov.sg/cos/resources/cos-annex-j.pdf (Assessed: 4 February 2024)
 
-Mushore, T., Odindi, J. and Mutanga, O. (2022). ‘“Cool” Roofs as a Heat-Mitigation Measure in Urban Heat Islands: A Comparative Analysis Using Sentinel 2 and Landsat Data’. Remote Sensing, 14 (17), p. 4247. doi: 10.3390/rs14174247.
+Mushore, T., Odindi, J. and Mutanga, O. (2022). '"Cool" Roofs as a Heat-Mitigation Measure in Urban Heat Islands: A Comparative Analysis Using Sentinel 2 and Landsat Data'. Remote Sensing, 14 (17), p. 4247. doi: 10.3390/rs14174247.
 
 Oke, T. R. (1982). 'The energetic basis of the urban heat island'. Quarterly Journal of the Royal Meteorological Society, 108 (455), pp. 1--24. doi: 10.1002/qj.49710845502.
 
-Stewart, I. D. and Oke, T. R. (2012). ‘Local Climate Zones for Urban Temperature Studies’. Bulletin of the American Meteorological Society, 93 (12), pp. 1879–1900. doi: 10.1175/BAMS-D-11-00019.1.
+Stewart, I. D. and Oke, T. R. (2012). 'Local Climate Zones for Urban Temperature Studies'. Bulletin of the American Meteorological Society, 93 (12), pp. 1879--1900. doi: 10.1175/BAMS-D-11-00019.1.
 
 The National Climate Change Secretariat (NCCS) (no date) Impact of Climate Change In Singapore. Available at: https://www.nccs.gov.sg/singapores-climate-action/impact-of-climate-change-in-singapore/ (Assessed: 4 February 2024)
 
 Urban Redevelopment Authority(URA) (2023) Planning for a Liveable and HeatResilient City. Available at: https://www.thegpsc.org/sites/gpsc/files/2.\_singapore\_-\_planning_for_a_liveable_and_heat-resilient_city.pdf (Assessed: 4 February 2024)
 
-Xu, X., Qiu, W., Li, W., Huang, D., Li, X. and Yang, S. (2022). ‘Comparing satellite image and GIS data classified local climate zones to assess urban heat island: A case study of Guangzhou’. Frontiers in Environmental Science, 10, p. 1029445. doi: 10.3389/fenvs.2022.1029445.
+Xu, X., Qiu, W., Li, W., Huang, D., Li, X. and Yang, S. (2022). 'Comparing satellite image and GIS data classified local climate zones to assess urban heat island: A case study of Guangzhou'. Frontiers in Environmental Science, 10, p. 1029445. doi: 10.3389/fenvs.2022.1029445.
 
-Yang, J., Ren, J., Sun, D., Xiao, X., Xia, J. (Cecilia), Jin, C. and Li, X. (2021). ‘Understanding land surface temperature impact factors based on local climate zones’. Sustainable Cities and Society, 69, p. 102818. doi: 10.1016/j.scs.2021.102818.
+Yang, J., Ren, J., Sun, D., Xiao, X., Xia, J. (Cecilia), Jin, C. and Li, X. (2021). 'Understanding land surface temperature impact factors based on local climate zones'. Sustainable Cities and Society, 69, p. 102818. doi: 10.1016/j.scs.2021.102818.
 
 Zhang, Y., Li, D., Liu, L., Liang, Z., Shen, J., Wei, F. and Li, S. (2021). 'Spatiotemporal Characteristics of the Surface Urban Heat Island and Its Driving Factors Based on Local Climate Zones and Population in Beijing, China'. Atmosphere, 12 (10), p. 1271. doi: 10.3390/atmos12101271.
 :::
