--- a/Week04.qmd
+++ b/Week04.qmd
@@ -88,15 +88,15 @@ Moreover, Mushore, Odindi and Mutanga (2022) examine the colour of roof coating 
 
 # 3.Reflection {.unnumbered}
 
-## 3.1 Linking to global agendas and goals {.unnumbered}
+## 3.1 Linking to national policy, global agendas and goals {.unnumbered}
 
 In this Chapter, I have studied the UHI challenges and policies in Singapore, and have proposed two approaches to achieving policy goals from the perspective of remote sensing data, namely Urban Morphology (LCZs) and "Cooling" Roofs. The studies of urban morphology (LCZs) can monitor the thermal environment and support HDB Green Towns programmes, contributing to sustainable urban regeneration in the future. Given Singapore's high-density built-up areas, it is difficult to adopt a large-scale strategy. Thus, "Cooling" roofs, as an "acupuncture" strategy, can effectively mitigate the local thermal environment, and reduce building temperature and energy consumption. Overall, these two strategies solve the UHI effect from different urban scales, and effective application and deployment are conducive to achieving "Cooling" Singapore.
 
 Regarding global agendas and goals, the policy and strategies effectively respond to the 2015 Paris Agreement. Moreover, In terms of Sustainable Development Goals (SDG) proposed by the United Nations(UN), the efforts of strategies can be reflected in SDG11 and SDG12 (Figure 9).
 
-<br/> **SDGs11**:Sustainable Cities and Communities. <br/> Make cities and human settlements inclusive, safe, resilient and sustainable. <br/> **SDGs13**: Climate Action.<br/> Take urgent action to combat climate change and its impact.
+<br/> **SDGs11**:Sustainable Cities and Communities. <br/> Make cities and human settlements inclusive, safe, resilient and sustainable. <br/> **SDGs13**: Climate Action. <br/> Take urgent action to combat climate change and its impact.
 
-![Figure 9 In support of SDGs 11 and SDG 13](source/week04/SDG11_13.png) 
+![Figure 9 In support of SDGs 11 and SDG 13](source/week04/SDG11_13.png)
 
 ## 3.2 Personal Reflection {.unnumbered}
 
